refactor: small change

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,8 +18,8 @@ spring:
 
 security:
   token:
-    jwt-private-key: 'classpath:app.key'
-    jwt-public-key: 'classpath:app.pub'
+    private-key: 'classpath:app.key'
+    public-key: 'classpath:app.pub'
     expiration-token: 15
     expiration-refresh-token: 30
 
